--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
     </header>
     <section id="analysis">
         <h2>Analysis</h2>
-        <div class="visualization">
-            <iframe src="visualization1.html" width="100%" height="600px"></iframe>
-        </div>
-        <div class="visualization">
-            <iframe src="visualization2.html" width="100%" height="600px"></iframe>
-        </div>
+        <p>This is a placeholder for analysis content.</p>
+    </section>
+    <section id="recommendations">
+        <h2>Recommendations</h2>
+        <p>This is a placeholder for recommendations content.</p>
+    </section>
+    <section id="about">
+        <h2>About</h2>
+        <p>This is a placeholder for about content.</p>
+    </section>
+    <section id="team">
+        <h2>Our Team</h2>
+        <p>This is a placeholder for team content.</p>
     </section>
     <footer>
         <p>&copy; 2024 Green Energy Locator</p>
