--- a/index.html
+++ b/index.html
@@ -20,7 +20,42 @@
     </header>
     <section id="analysis">
         <h2>Analysis</h2>
-        <p>This is a placeholder for analysis content.</p>
+        <div class="visualization">
+            <!-- Tableau Visualization Embed Code -->
+            <div class='tableauPlaceholder' id='viz1722284596427' style='position: relative'>
+                <noscript><a href='#'><img alt='Dashboard 4 ' src='https://public.tableau.com/static/images/4M/4MR5NJ5NX/1_rss.png' style='border: none' /></a></noscript>
+                <object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+                    <param name='embed_code_version' value='3' /> 
+                    <param name='path' value='shared/4MR5NJ5NX' /> 
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image' value='https://public.tableau.com/static/images/4M/4MR5NJ5NX/1.png' /> 
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en-US' />
+                </object>
+            </div>                
+            <script type='text/javascript'>
+                var divElement = document.getElementById('viz1722284596427');                    
+                var vizElement = divElement.getElementsByTagName('object')[0];                    
+                if (divElement.offsetWidth > 800) { 
+                    vizElement.style.width='1000px'; 
+                    vizElement.style.height='827px';
+                } else if (divElement.offsetWidth > 500) { 
+                    vizElement.style.width='1000px'; 
+                    vizElement.style.height='827px';
+                } else { 
+                    vizElement.style.width='100%'; 
+                    vizElement.style.height='1127px';
+                }                     
+                var scriptElement = document.createElement('script');                    
+                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+                vizElement.parentNode.insertBefore(scriptElement, vizElement);
+            </script>
+        </div>
     </section>
     <section id="recommendations">
         <h2>Recommendations</h2>
