Add Tableau visualization embed code

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>This is a placeholder for team content.</p>
     </section>
     <footer>
-        <p>&copy; 2024 Green Energy Locator</p>
+        <p>&copy; Urbanization & Housing Market Trendsr</p>
     </footer>
     <script src="script.js"></script>
 </body>
