Add Tableau visualization embed code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Green Energy Locator</h1>
+        <h1>Urbanization & Housing Market Trends</h1>
         <nav>
             <ul>
                 <li><a href="#analysis">Analysis</a></li>
