Add Home tab to navigation menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Urbanization & Housing Market Trends</h1>
         <nav>
             <ul>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#analysis">Analysis</a></li>
                 <li><a href="#recommendations">Recommendations</a></li>
                 <li><a href="#about">About</a></li>
@@ -18,6 +19,10 @@
             </ul>
         </nav>
     </header>
+    <section id="home">
+        <h2>Home</h2>
+        <p>Welcome to the Urbanization & Housing Market Trends website. This is the home section where you can find an introduction to our project.</p>
+    </section>
     <section id="analysis">
         <h2>Analysis</h2>
         <div class="visualization">
@@ -70,7 +75,7 @@
         <p>This is a placeholder for team content.</p>
     </section>
     <footer>
-        <p>&copy; Urbanization & Housing Market Trendsr</p>
+        <p>&copy; 2024 Urbanization & Housing Market Trends</p>
     </footer>
     <script src="script.js"></script>
 </body>
