Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
     </section>
     <section id="team">
         <h2>Our Team</h2>
-        <p>This is a placeholder for team content.</p>
+        <p>Zeynep Dereli</p>
+        <p>Negin Jalali</p>
+        <p>Soroush Yazdani</p>
+        <p>Jeremy Ramirez</p>
     </section>
     <footer>
         <p>&copy; 2024 Urbanization & Housing Market Trends</p>
