Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <section id="team">
         <h2>Our Team</h2>
         <p>Zeynep Dereli</p>
-        <p>Negin Jalali</p>
+        <p>Negin Djalali</p>
         <p>Soroush Yazdani</p>
         <p>Jeremy Ramirez</p>
     </section>
