Add active class for tab highlighting

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                 let current = '';
                 sections.forEach(section => {
                     const sectionTop = section.offsetTop;
-                    if (pageYOffset >= sectionTop - 60) {
+                    const sectionHeight = section.clientHeight;
+                    if (pageYOffset >= sectionTop - sectionHeight / 3) {
                         current = section.getAttribute('id');
                     }
                 });
