--- a/index.html
+++ b/index.html
@@ -21,7 +21,35 @@
     </header>
     <section id="home">
         <h2>Home</h2>
-        <p>Welcome to the Urbanization & Housing Market Trends website. Explore our analysis, recommendations, and team to learn more about the trends impacting urban development and housing markets.</p>
+        <div>
+            <h3>Background:</h3>
+            <ul>
+                <li>Urbanization and housing market trends have a profound impact on the economic, social, and environmental landscapes of regions. <sup>1-3</sup></li>
+                <li>Understanding these trends is essential for urban planners, policymakers, real estate developers, economists, and the general public. Trends include:
+                    <ul>
+                        <li>Historical Housing Prices</li>
+                        <li>Urban vs. Suburban Trends</li>
+                        <li>Impact of Urban Development</li>
+                        <li>Affordability and Income Inequality</li>
+                    </ul>
+                </li>
+            </ul>
+            <h3>Data Source: <a href="https://www.kaggle.com/zillow/zecon" target="_blank">Zillow 1979 - 2018 dataset from Kaggle</a></h3>
+            <ul>
+                <li>The Zillow dataset from Kaggle contains comprehensive information on housing prices in the United States from 1979 to 2018. It includes data on various housing metrics, such as median rent prices, home values, and sales volumes, across different regions.</li>
+                <li>Data Fields:
+                    <ul>
+                        <li>Region Name</li>
+                        <li>Region Type</li>
+                        <li>Date</li>
+                        <li>Median Home Value</li>
+                        <li>Median Rent Price</li>
+                        <li>Home Sales Volume</li>
+                        <li>Price Per Square Foot</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </section>
     <section id="analysis">
         <h2>Analysis</h2>
@@ -68,70 +96,20 @@
     </section>
     <section id="about">
         <h2>About</h2>
-        <div>
-            <h3>Background:</h3>
-            <ul>
-                <li>Urbanization and housing market trends have a profound impact on the economic, social, and environmental landscapes of regions. <sup>1-3</sup></li>
-                <li>Understanding these trends is essential for urban planners, policymakers, real estate developers, economists, and the general public. Trends include:
-                    <ul>
-                        <li>Historical Housing Prices</li>
-                        <li>Urban vs. Suburban Trends</li>
-                        <li>Impact of Urban Development</li>
-                        <li>Affordability and Income Inequality</li>
-                    </ul>
-                </li>
-            </ul>
-            <h3>Data Source: <a href="https://www.kaggle.com/zillow/zecon" target="_blank">Zillow 1979 - 2018 dataset from Kaggle</a></h3>
-            <ul>
-                <li>The Zillow dataset from Kaggle contains comprehensive information on housing prices in the United States from 1979 to 2018. It includes data on various housing metrics, such as median rent prices, home values, and sales volumes, across different regions.</li>
-                <li>Data Fields:
-                    <ul>
-                        <li>Region Name</li>
-                        <li>Region Type</li>
-                        <li>Date</li>
-                        <li>Median Home Value</li>
-                        <li>Median Rent Price</li>
-                        <li>Home Sales Volume</li>
-                        <li>Price Per Square Foot</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+        <p>This is a placeholder for about content.</p>
     </section>
     <section id="team">
         <h2>Our Team</h2>
-        <p>Zeynep Dereli</p>
-        <p>Negin Jalali</p>
-        <p>Soroush Yazdani</p>
-        <p>Jeremy Ramirez</p>
+        <ul>
+            <li>Zeynep Dereli</li>
+            <li>Negin Jalali</li>
+            <li>Soroush Yazdani</li>
+            <li>Jeremy Ramirez</li>
+        </ul>
     </section>
     <footer>
         <p>&copy; 2024 Urbanization & Housing Market Trends</p>
     </footer>
     <script src="script.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const sections = document.querySelectorAll('section');
-            const navLinks = document.querySelectorAll('nav ul li a');
-            
-            window.addEventListener('scroll', function () {
-                let current = '';
-                sections.forEach(section => {
-                    const sectionTop = section.offsetTop;
-                    const sectionHeight = section.clientHeight;
-                    if (pageYOffset >= sectionTop - sectionHeight / 3) {
-                        current = section.getAttribute('id');
-                    }
-                });
-
-                navLinks.forEach(link => {
-                    link.classList.remove('active');
-                    if (link.getAttribute('href').includes(current)) {
-                        link.classList.add('active');
-                    }
-                });
-            });
-        });
-    </script>
 </body>
 </html>
