Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="team-member">
                 <img src="path/to/image4.jpg" alt="Jeremy Ramirez">
                 <h3>Jeremy Ramirez</h3>
-                <a href="https://www.linkedin.com/in/jeremyramirez">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/jeremy-ramirez">LinkedIn</a>
             </div>
         </div>
     </section>
