Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
             <div class="team-member">
                 <img src="path/to/image1.jpg" alt="Zeynep Dereli">
                 <h3>Zeynep Dereli</h3>
-                <a href="https://www.linkedin.com/in/zeynepdereli">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/z">LinkedIn</a>
             </div>
             <div class="team-member">
-                <img src="path/to/image2.jpg" alt="Negin Jalali">
+                <img src="path/to/image2.jpg" alt="Negin Djalali">
                 <h3>Negin Jalali</h3>
-                <a href="https://www.linkedin.com/in/neginjalali">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/">LinkedIn</a>
             </div>
             <div class="team-member">
                 <img src="path/to/image3.jpg" alt="Soroush Yazdani">
                 <h3>Soroush Yazdani</h3>
-                <a href="https://www.linkedin.com/in/soroushyazdani">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/">LinkedIn</a>
             </div>
             <div class="team-member">
                 <img src="path/to/image4.jpg" alt="Jeremy Ramirez">
