--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="team-member">
                 <img src="path/to/image2.jpg" alt="Negin Djalali">
-                <h3>Negin Jalali</h3>
+                <h3>Negin Djalali</h3>
                 <a href="https://www.linkedin.com/in/">LinkedIn</a>
             </div>
             <div class="team-member">
