Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
             <div class="team-member">
                 <img src="path/to/image1.jpg" alt="Zeynep Dereli">
                 <h3>Zeynep Dereli</h3>
-                <a href="linkedin.com/in/zeynep-dereli-phd-4270564">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/zeynep-dereli-phd-4270564">LinkedIn</a>
             </div>
             <div class="team-member">
                 <img src="path/to/image2.jpg" alt="Negin Djalali">
                 <h3>Negin Djalali</h3>
-                <a href="linkedin.com/in/negin-djalali-265218187">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/negin-djalali-265218187">LinkedIn</a>
             </div>
             <div class="team-member">
                 <img src="path/to/image3.jpg" alt="Soroush Yazdani">
