Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <a href="https://www.linkedin.com/in/">LinkedIn</a>
             </div>
             <div class="team-member">
-                <img src="path/to/image4.jpg" alt="Jeremy Ramirez">
+                <img src="https://media.licdn.com/dms/image/C5603AQG8YuIaFsuOCQ/profile-displayphoto-shrink_800_800/0/1654882170871?e=1727913600&v=beta&t=q_KD7ZJPVtgvVtfk9Da0-UlUV24oGV1SH1e6u844ZKs" alt="Jeremy Ramirez">
                 <h3>Jeremy Ramirez</h3>
                 <a href="https://www.linkedin.com/in/jeremy-ramirez">LinkedIn</a>
             </div>
