Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
         <h2>Our Team</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="path/to/image1.jpg" alt="Zeynep Dereli">
+                <img src="https://media.licdn.com/dms/image/C5603AQG8YuIaFsuOCQ/profile-displayphoto-shrink_800_800/0/1654882170871?e=1727913600&v=beta&t=q_KD7ZJPVtgvVtfk9Da0-UlUV24oGV1SH1e6u844ZKs" alt="Zeynep Dereli">
                 <h3>Zeynep Dereli</h3>
                 <a href="https://www.linkedin.com/in/zeynep-dereli-phd-4270564">LinkedIn</a>
             </div>
             <div class="team-member">
-                <img src="path/to/image2.jpg" alt="Negin Djalali">
+                <img src="https://media.licdn.com/dms/image/C5603AQG8YuIaFsuOCQ/profile-displayphoto-shrink_800_800/0/1654882170871?e=1727913600&v=beta&t=q_KD7ZJPVtgvVtfk9Da0-UlUV24oGV1SH1e6u844ZKs" alt="Negin Djalali">
                 <h3>Negin Djalali</h3>
                 <a href="https://www.linkedin.com/in/negin-djalali-265218187">LinkedIn</a>
             </div>
             <div class="team-member">
-                <img src="path/to/image3.jpg" alt="Soroush Yazdani">
+                <img src="https://media.licdn.com/dms/image/C5603AQG8YuIaFsuOCQ/profile-displayphoto-shrink_800_800/0/1654882170871?e=1727913600&v=beta&t=q_KD7ZJPVtgvVtfk9Da0-UlUV24oGV1SH1e6u844ZKs" alt="Soroush Yazdani">
                 <h3>Soroush Yazdani</h3>
                 <a href="https://www.linkedin.com/in/">LinkedIn</a>
             </div>
