Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -99,27 +99,32 @@
         </div>
     </section>
     <section id="team">
-        <h2>Our Team</h2>
+        <h2>Our Amazing Team</h2>
+        <p>UC Berkeley MIDS Data Scientists</p>
         <div class="team-container">
             <div class="team-member">
-                <img src="https://media.licdn.com/dms/image/C5603AQG8YuIaFsuOCQ/profile-displayphoto-shrink_800_800/0/1654882170871?e=1727913600&v=beta&t=q_KD7ZJPVtgvVtfk9Da0-UlUV24oGV1SH1e6u844ZKs" alt="Zeynep Dereli">
+                <img src="images/zeynep-photo.jpg" alt="Zeynep Dereli">
                 <h3>Zeynep Dereli</h3>
-                <a href="https://www.linkedin.com/in/zeynep-dereli-phd-4270564">LinkedIn</a>
+                <p>San Francisco, U.S.A.</p>
+                <a href="https://www.linkedin.com/in/zeynep-dereli-phd-4270564" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
-                <img src="https://media.licdn.com/dms/image/C5603AQG8YuIaFsuOCQ/profile-displayphoto-shrink_800_800/0/1654882170871?e=1727913600&v=beta&t=q_KD7ZJPVtgvVtfk9Da0-UlUV24oGV1SH1e6u844ZKs" alt="Negin Djalali">
+                <img src="images/negin-photo.jpg" alt="Negin Djalali">
                 <h3>Negin Djalali</h3>
-                <a href="https://www.linkedin.com/in/negin-djalali-265218187">LinkedIn</a>
+                <p>Tokyo, Japan</p>
+                <a href="https://www.linkedin.com/in/negin-djalali-265218187" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
-                <img src="https://media.licdn.com/dms/image/C5603AQG8YuIaFsuOCQ/profile-displayphoto-shrink_800_800/0/1654882170871?e=1727913600&v=beta&t=q_KD7ZJPVtgvVtfk9Da0-UlUV24oGV1SH1e6u844ZKs" alt="Soroush Yazdani">
+                <img src="images/soroush-photo.jpg" alt="Soroush Yazdani">
                 <h3>Soroush Yazdani</h3>
-                <a href="https://www.linkedin.com/in/">LinkedIn</a>
+                <p>New Jersey, U.S.A.</p>
+                <a href="https://www.linkedin.com/in/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
-                <img src="https://media.licdn.com/dms/image/C5603AQG8YuIaFsuOCQ/profile-displayphoto-shrink_800_800/0/1654882170871?e=1727913600&v=beta&t=q_KD7ZJPVtgvVtfk9Da0-UlUV24oGV1SH1e6u844ZKs" alt="Jeremy Ramirez">
+                <img src="images/jeremy-photo.jpg" alt="Jeremy Ramirez">
                 <h3>Jeremy Ramirez</h3>
-                <a href="https://www.linkedin.com/in/jeremy-ramirez">LinkedIn</a>
+                <p>Toronto, Canada</p>
+                <a href="https://www.linkedin.com/in/jeremy-ramirez" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
         </div>
     </section>
