Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -105,25 +105,25 @@
             <div class="team-member">
                 <img src="images/zeynep-photo.jpg" alt="Zeynep Dereli">
                 <h3>Zeynep Dereli</h3>
-                <p>San Francisco, U.S.A.</p>
+                <p>San Francisco, California</p>
                 <a href="https://www.linkedin.com/in/zeynep-dereli-phd-4270564" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
                 <img src="images/negin-photo.jpg" alt="Negin Djalali">
                 <h3>Negin Djalali</h3>
-                <p>Tokyo, Japan</p>
+                <p>Los Angeles, California</p>
                 <a href="https://www.linkedin.com/in/negin-djalali-265218187" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
                 <img src="images/soroush-photo.jpg" alt="Soroush Yazdani">
                 <h3>Soroush Yazdani</h3>
-                <p>New Jersey, U.S.A.</p>
+                <p>San Fransciso, California</p>
                 <a href="https://www.linkedin.com/in/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
                 <img src="images/jeremy-photo.jpg" alt="Jeremy Ramirez">
                 <h3>Jeremy Ramirez</h3>
-                <p>Toronto, Canada</p>
+                <p>Long Beach, California</p>
                 <a href="https://www.linkedin.com/in/jeremy-ramirez" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
         </div>
