Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <img src="images/jeremy-photo.jpg" alt="Jeremy Ramirez">
                 <h3>Jeremy Ramirez</h3>
                 <p>Long Beach, California</p>
-                <a href="https://www.linkedin.com/in/jeremy-ramirez" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
+                <a href="https://www.linkedin.com/in/jeremyramirez">LinkedIn</a>
             </div>
         </div>
     </section>
