Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -103,25 +103,25 @@
         <p>UC Berkeley MIDS Data Scientists</p>
         <div class="team-container">
             <div class="team-member">
-                <img src="images/zeynep-photo.jpg" alt="Zeynep Dereli">
+                <img src="images/zeynep-photo.jpg" alt="Zeynep Dereli" class="profile">
                 <h3>Zeynep Dereli</h3>
                 <p>San Francisco, California</p>
                 <a href="https://www.linkedin.com/in/zeynep-dereli-phd-4270564" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
-                <img src="images/negin-photo.jpg" alt="Negin Djalali">
+                <img src="images/negin-photo.jpg" alt="Negin Djalali" class="profile">
                 <h3>Negin Djalali</h3>
                 <p>Los Angeles, California</p>
                 <a href="https://www.linkedin.com/in/negin-djalali-265218187" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
-                <img src="images/soroush-photo.jpg" alt="Soroush Yazdani">
+                <img src="images/soroush-photo.jpg" alt="Soroush Yazdani" class="profile">
                 <h3>Soroush Yazdani</h3>
-                <p>San Fransciso, California</p>
+                <p>San Francisco, California</p>
                 <a href="https://www.linkedin.com/in/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
-                <img src="images/jeremy-photo.jpg" alt="Jeremy Ramirez">
+                <img src="images/jeremy-photo.jpg" alt="Jeremy Ramirez" class="profile">
                 <h3>Jeremy Ramirez</h3>
                 <p>Long Beach, California</p>
                 <a href="https://www.linkedin.com/in/jeremy-ramirez" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
