Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
     <section id="team">
         <h2>Our Amazing Team</h2>
-        <p>UC Berkeley MIDS Data Scientists</p>
+        <p class="team-subtitle">UC Berkeley MIDS Data Scientists</p>
         <div class="team-container">
             <div class="team-member">
                 <img src="images/zeynep-photo.jpg" alt="Zeynep Dereli" class="profile">
