Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <img src="images/soroush-photo.jpg" alt="Soroush Yazdani" class="profile">
                 <h3>Soroush Yazdani</h3>
                 <p>San Francisco, California</p>
-                <a href="https://www.linkedin.com/in/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
+                <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
                 <img src="images/jeremy-photo.jpg" alt="Jeremy Ramirez" class="profile">
