--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#recommendations">Recommendations</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#team">Our Team</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -118,7 +119,7 @@
                 <img src="images/soroush-photo.jpg" alt="Soroush Yazdani" class="profile">
                 <h3>Soroush Yazdani</h3>
                 <p>San Francisco, California</p>
-                <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
+                <a href="https://www.linkedin.com/in/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
             <div class="team-member">
                 <img src="images/jeremy-photo.jpg" alt="Jeremy Ramirez" class="profile">
@@ -126,6 +127,19 @@
                 <p>Long Beach, California</p>
                 <a href="https://www.linkedin.com/in/jeremy-ramirez" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn" class="linkedin-icon"></a>
             </div>
+        </div>
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>We highly value your feedback.</p>
+        <div class="contact-container">
+            <form action="mailto:youremail@example.com" method="post" enctype="text/plain">
+                <input type="text" name="name" placeholder="Your Name *" required>
+                <input type="email" name="email" placeholder="Your Email *" required>
+                <input type="tel" name="phone" placeholder="Your Phone *" required>
+                <textarea name="message" placeholder="Your Message *" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
         </div>
     </section>
     <footer>
