Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         </nav>
     </header>
     <section id="home">
-        <video autoplay muted loop id="homeVideo">
-            <source src="city.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-        </video>
+        <div class="video-container">
+            <video autoplay muted loop id="homeVideo">
+                <source src="city.mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+            </video>
+        </div>
         <div class="overlay">
             <h2>Home</h2>
             <p>Welcome to the Urbanization & Housing Market Trends website. Explore our analysis, recommendations, and team to learn more about the trends impacting urban development and housing markets.</p>
