--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#analysis">Analysis</a></li>
-                <li><a href="#recommendations">Recommendations</a></li>
+                <!-- Removed the Recommendations link -->
+                <!-- <li><a href="#recommendations">Recommendations</a></li> -->
                 <li><a href="#about">About</a></li>
                 <li><a href="#team">Our Team</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -70,10 +71,13 @@
             </script>
         </div>
     </section>
+    <!-- Removed the Recommendations section -->
+    <!--
     <section id="recommendations">
         <h2>Recommendations</h2>
         <p>This is a placeholder for recommendations content.</p>
     </section>
+    -->
     <section id="about">
         <h2>About</h2>
         <div>
