--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <!-- <li><a href="#recommendations">Recommendations</a></li> -->
                 <li><a href="#about">About</a></li>
                 <li><a href="#team">Our Team</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
