Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div>
             <h3>Background:</h3>
             <ul>
-                <li>Urbanization and housing market trends have a profound impact on the economic, social, and environmental landscapes of regions. <sup>1-3</sup></li>
+                <li>Urbanization and housing market trends have a profound impact on the economic, social, and environmental landscapes of regions. </li>
                 <li>Understanding these trends is essential for urban planners, policymakers, real estate developers, economists, and the general public. Trends include:
                     <ul>
                         <li>Historical Housing Prices</li>
