Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#analysis">Analysis</a></li>
-                <!-- Removed the Recommendations link -->
-                <!-- <li><a href="#recommendations">Recommendations</a></li> -->
                 <li><a href="#about">About</a></li>
                 <li><a href="#team">Our Team</a></li>
-                <li><a href="#contact" class="active">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
