Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -69,13 +69,6 @@
             </script>
         </div>
     </section>
-    <!-- Removed the Recommendations section -->
-    <!--
-    <section id="recommendations">
-        <h2>Recommendations</h2>
-        <p>This is a placeholder for recommendations content.</p>
-    </section>
-    -->
     <section id="about">
         <h2>About</h2>
         <div>
@@ -90,6 +83,14 @@
                         <li>Affordability and Income Inequality</li>
                     </ul>
                 </li>
+            </ul>
+            <h3>Intended Audience:</h3>
+            <ul>
+                <li><strong>Urban Planners:</strong> To help design and implement effective urban development strategies.</li>
+                <li><strong>Policymakers:</strong> To inform the creation of policies that address housing affordability and economic growth.</li>
+                <li><strong>Real Estate Developers:</strong> To provide insights into market trends and investment opportunities.</li>
+                <li><strong>Economists:</strong> To analyze the economic impacts of housing trends and urbanization.</li>
+                <li><strong>General Public:</strong> To increase awareness and understanding of the factors influencing housing markets and urban development, enabling informed decision-making for homebuyers, renters, and community advocates.</li>
             </ul>
             <h3>Data Source: <a href="https://www.kaggle.com/zillow/zecon" target="_blank">Zillow 1979 - 2018 dataset from Kaggle</a></h3>
             <ul>
