Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </ul>
                 </li>
             </ul>
-            <h3>Intended Audience:</h3>
+            <h3>Intended Audience (This webpage is designed for a wide range of stakeholders, including):</h3>
             <ul>
                 <li><strong>Urban Planners:</strong> To help design and implement effective urban development strategies.</li>
                 <li><strong>Policymakers:</strong> To inform the creation of policies that address housing affordability and economic growth.</li>
