--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div>
             <h3>Background:</h3>
             <ul>
-                <li>Urbanization and housing market trends have a profound impact on the economic, social, and environmental landscapes of regions. </li>
+                <li>Urbanization and housing market trends have a profound impact on the economic, social, and environmental landscapes of regions.</li>
                 <li>Understanding these trends is essential for urban planners, policymakers, real estate developers, economists, and the general public. Trends include:
                     <ul>
                         <li>Historical Housing Prices</li>
@@ -84,13 +84,21 @@
                     </ul>
                 </li>
             </ul>
-            <h3>Intended Audience (This webpage is designed for a wide range of stakeholders, including):</h3>
+            <h3>Intended Audience:</h3>
             <ul>
                 <li><strong>Urban Planners:</strong> To help design and implement effective urban development strategies.</li>
                 <li><strong>Policymakers:</strong> To inform the creation of policies that address housing affordability and economic growth.</li>
                 <li><strong>Real Estate Developers:</strong> To provide insights into market trends and investment opportunities.</li>
                 <li><strong>Economists:</strong> To analyze the economic impacts of housing trends and urbanization.</li>
                 <li><strong>General Public:</strong> To increase awareness and understanding of the factors influencing housing markets and urban development, enabling informed decision-making for homebuyers, renters, and community advocates.</li>
+            </ul>
+            <h3>Visualization Goals:</h3>
+            <ul>
+                <li><strong>Employment Trends:</strong> To illustrate the changes in employment rates over the years and their correlation with housing market trends.</li>
+                <li><strong>Median House Prices by State:</strong> To provide a visual representation of how median house prices vary across different states and how they have evolved over time.</li>
+                <li><strong>Median House Price vs. Median Income:</strong> To compare the average median house prices with median incomes, highlighting affordability issues and economic disparities.</li>
+                <li><strong>Historical Trends:</strong> To present a comprehensive historical overview of housing market data, allowing for analysis of long-term trends and patterns.</li>
+                <li><strong>Data Interaction:</strong> To enable users to interact with the visualizations for a deeper understanding of specific data points and trends.</li>
             </ul>
             <h3>Data Source: <a href="https://www.kaggle.com/zillow/zecon" target="_blank">Zillow 1979 - 2018 dataset from Kaggle</a></h3>
             <ul>
