--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h3>Data Source: <a href="https://www.kaggle.com/zillow/zecon" target="_blank">Zillow 1979 - 2018 dataset from Kaggle</a></h3>
             <ul>
                 <li>The Zillow dataset from Kaggle contains comprehensive information on housing prices in the United States from 1979 to 2018. It includes data on various housing metrics, such as median rent prices, home values, and sales volumes, across different regions.</li>
-                <li>Data Fields:
+                <li>Relevant Data Fields:
                     <ul>
                         <li>Region Name</li>
                         <li>Region Type</li>
