Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -69,12 +69,19 @@
             </script>
         </div>
     </section>
+    <!-- Removed the Recommendations section -->
+    <!--
+    <section id="recommendations">
+        <h2>Recommendations</h2>
+        <p>This is a placeholder for recommendations content.</p>
+    </section>
+    -->
     <section id="about">
         <h2>About</h2>
         <div>
             <h3>Background:</h3>
             <ul>
-                <li>Urbanization and housing market trends have a profound impact on the economic, social, and environmental landscapes of regions.</li>
+                <li>Urbanization and housing market trends have a profound impact on the economic, social, and environmental landscapes of regions. </li>
                 <li>Understanding these trends is essential for urban planners, policymakers, real estate developers, economists, and the general public. Trends include:
                     <ul>
                         <li>Historical Housing Prices</li>
@@ -100,7 +107,7 @@
                 <li><strong>Historical Trends:</strong> To present a comprehensive historical overview of housing market data, allowing for analysis of long-term trends and patterns.</li>
                 <li><strong>Data Interaction:</strong> To enable users to interact with the visualizations for a deeper understanding of specific data points and trends.</li>
             </ul>
-            <h3>Data Source: <a href="https://www.kaggle.com/zillow/zecon" target="_blank">Zillow 1979 - 2018 dataset from Kaggle</a></h3>
+            <h3>Data Source: <a href="https://www.kaggle.com/zillow/zecon" class="about-link" target="_blank">Zillow 1979 - 2018 dataset from Kaggle</a></h3>
             <ul>
                 <li>The Zillow dataset from Kaggle contains comprehensive information on housing prices in the United States from 1979 to 2018. It includes data on various housing metrics, such as median rent prices, home values, and sales volumes, across different regions.</li>
                 <li>Relevant Data Fields:
