Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </video>
         </div>
         <div class="overlay">
-            <p>Welcome to the Urbanization & Housing Market Trends website. Explore our analysis, recommendations, and team to learn more about the trends impacting urban development and housing markets.</p>
+            <p>Welcome to the Urbanization & Housing Market Trends website. Explore our interactive visualization to learn more about the trends impacting urban development and housing markets.</p>
         </div>
     </section>
     <section id="about">
