--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="home">
         <div class="video-container">
             <video autoplay muted loop id="homeVideo">
-                <source src="city.mp4" type="video/mp4">
+                <source src="https://drive.google.com/uc?export=download&id=1Kllz3rpJSwkT5C3v8280yWbcxUIIgUar" type="video/mp4">
                 Your browser does not support HTML5 video.
             </video>
         </div>
