Add team members to the Our Team section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <section id="home">
         <div class="video-container">
-            <iframe src="https://drive.google.com/file/d/1Kllz3rpJSwkT5C3v8280yWbcxUIIgUar/preview" width="640" height="480" allow="autoplay" muted loop></iframe>
+            <iframe src="https://drive.google.com/file/d/1Kllz3rpJSwkT5C3v8280yWbcxUIIgUar/preview" width="640" height="480" allow="autoplay; muted; loop"></iframe>
         </div>
         <div class="overlay">
             <p>Welcome to the Urbanization & Housing Market Trends website. Explore our interactive visualization to learn more about the trends impacting urban development and housing markets.</p>
